CY-20: Enviar un correo al usuario con estado de la solicitud